fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ body {
     margin: 0 auto;
     padding: 0;
     overflow: hidden;
-    background: linear-gradient(180.75deg, #1C1C1C -140.96%, #252220 84.07%);
+    background: linear-gradient(180deg, #0A0A0A 0%, #252220 100%);
     position: relative;
 }
 
@@ -296,7 +296,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url('../img/Hero_background.png');
+    background-image: url('../img/Hero_background.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -340,7 +340,11 @@ body {
     align-items: flex-start;
     gap: 20px;
     box-sizing: border-box;
-    background: linear-gradient(180deg, #0A0A0A 0%, #252220 100%);
+    background-image: url('../img/Hero_background.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
     padding: 20px;
     width: 100%;
     max-width: 1200px;
@@ -1321,10 +1325,6 @@ body.no-scroll {
     }
 
     .hero__CTA {
-        position: absolute;
-        bottom: 0;
-        left: 10%;
-        right: 10%;
         width: 80%;
         max-width: 55%;
         gap: 80px;
@@ -1513,17 +1513,16 @@ body.no-scroll {
 
     /* Остальные стили секций остаются без изменений */
     .hero {
-        height: 100vh;
         padding: 20px 10px;
         width: 100%;
     }
 
     .hero__content {
         flex-direction: column;
-        align-items: flex-end;
-        justify-content: space-evenly;
+        justify-content: center;
+        margin: 0 auto 40px;
         padding: 20px;
-        height: 100vh;
+        height: 100%;
     }
 
     .hero__photo {
